--- a/analog-watchface/src/main/AndroidManifest.xml
+++ b/analog-watchface/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.nvdang.analogwatchfaceopengl">
 
     <uses-feature android:name="android.hardware.type.watch" />
@@ -7,6 +8,7 @@
     <!-- Required to act as a custom watch face. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" /> <!-- Required for complications to receive complication data and open the provider chooser. -->
     <uses-permission android:name="com.google.android.wearable.permission.RECEIVE_COMPLICATION_DATA" />
+
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,9 @@
             android:name=".simpleDialogWatchface.MyWatchFace"
             android:label="@string/my_analog_name"
             android:permission="android.permission.BIND_WALLPAPER">
+            <meta-data
+                android:name="com.google.android.wearable.watchface.wearableConfigurationAction"
+                android:value="com.example.android.wearable.watchface.CONFIG_COMPLICATION"/>
             <meta-data
                 android:name="android.service.wallpaper"
                 android:resource="@xml/watch_face" />
@@ -39,6 +44,8 @@
             </intent-filter>
 
         </service>
+
+
 
         <!--<service-->
             <!--android:name=".TestService"-->
@@ -65,6 +72,19 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <activity android:name="android.support.wearable.complications.ComplicationHelperActivity"/>
+
+        <!-- TODO: Step 3, addConfigActivity -->
+        <activity
+            android:name=".sample.ComplicationConfigActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="com.example.android.wearable.watchface.CONFIG_COMPLICATION"/>
+                <category android:name="com.google.android.wearable.watchface.category.WEARABLE_CONFIGURATION"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
